--- a/_data/locale/ko-KR.yml
+++ b/_data/locale/ko-KR.yml
@@ -3,7 +3,7 @@ nav:
   contribute: Contribute
 
 index:
-  lead: 오픈소스 소프트웨어는 바로 당신과 같은 사람에 의해 만들어 집니다. 프로젝트를 어떻게 시작하고 키워나가는지 배우세요.
+  lead: 당신도 오픈소스 소프트웨어를 만들 수 있습니다. 프로젝트를 시작하고 키워나가는 방법을 알아봅시다.
 
 article:
   table_of_contents: 목차
@@ -11,7 +11,7 @@ article:
 footer:
   contribute:
     heading: Contribute
-    description: 제안할 것이 있나요? 이 내용은 오픈소스입니다. 여기를 개선하기 위해 우리를 도와주세요.
+    description: 제안할 것이 있나요? 이곳의 내용 역시 오픈소스입니다. 우리를 도와주세요.
     button: Contribute
   subscribe:
     heading: 구독하기
