Contribute footer메시지 수정

--- a/_data/locale/ko-KR.yml
+++ b/_data/locale/ko-KR.yml
@@ -11,7 +11,7 @@ article:
 footer:
   contribute:
     heading: Contribute
-    description: 제안할 것이 있나요? 이곳의 내용 역시 오픈소스입니다. 우리를 도와주세요.
+    description: 제안하고 싶은게 있다구요? 이곳도 오픈소스로 관리됩니다. 여러분의 손길을 기다립니다.
     button: Contribute
   subscribe:
     heading: 구독하기
